--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <p>晶体生长的基本原理，掌握平底结晶法和悬晶法，
                            了解溶液配置和注意事项。
                         </p>
-                        <a href="basic-crystallization.html">阅读全文</a>
+                        <a href="01.html">阅读全文</a>
                     </div>
                 </article>
 
