--- a/02.html
+++ b/02.html
@@ -210,6 +210,82 @@
             font-size: 0.8em;
         }
 
+        .content-image {
+        width: 80%;
+        margin: 1.5em auto;
+        border-radius: 12px;
+        box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+        }
+
+        .step-gallery {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2em;
+        margin: 2em 0;
+        }
+
+        .step-image img {
+        width: 100%;
+        border-radius: 8px;
+        transition: transform 0.3s ease;
+        }
+
+        .step-image:hover img {
+        transform: scale(1.03);
+        }
+
+        figcaption {
+        text-align: center;
+        color: var(--secondary);
+        margin-top: 0.8em;
+        font-size: 0.9em;
+        }
+
+        .comparison {
+        display: flex;
+        justify-content: space-around;
+        margin: 2em 0;
+        }
+
+        .comparison-item {
+        width: 45%;
+        text-align: center;
+        }
+
+        .comparison-item img {
+        width: 100%;
+        border-radius: 8px;
+        border: 2px solid var(--accent);
+        }
+
+        .safety-images {
+        display: flex;
+        gap: 1.5em;
+        margin-top: 1em;
+        }
+
+        .safety-img {
+        width: 150px;
+        height: 150px;
+        object-fit: cover;
+        border-radius: 50%;
+        border: 3px solid var(--primary);
+        padding: 4px;
+        }
+
+        @media (max-width: 768px) {
+        .step-gallery {
+            grid-template-columns: 1fr;
+        }
+        .comparison {
+            flex-direction: column;
+            gap: 2em;
+        }
+        .comparison-item {
+            width: 100%;
+        }
+        }
+
         @media (max-width: 1024px) {
             .container {
                 grid-template-columns: 1fr;
@@ -240,6 +316,7 @@
     <div class="container">
         <main class="content">
             <h1>晶体化学指南<br><span style="font-size:0.6em; color:var(--secondary)">03硫酸铜篇</span></h1>
+<img src="crystal02_1_1.png" alt="硫酸铜晶体特写" style="width:100%;max-height:400px;object-position: center top; border-radius:12px; margin:2em 0; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
 
             <section id="basic">
                 <h2>一、基础认识</h2>
