--- a/01.html
+++ b/01.html
@@ -380,6 +380,7 @@
                 <li><a href="#method2">悬晶法</a></li>
                 <li><a href="#notes">注意事项</a></li>
                 <li><a href="#qa">常见问题</a></li>
+                <li><a href="index.html">返回首页</a></li>
             </ul>
         </nav>
     </div>
