--- a/02.html
+++ b/02.html
@@ -432,6 +432,7 @@
                 <li><a href="#basic">基础认识</a></li>
                 <li><a href="#experiment">实验制备</a></li>
                 <li><a href="#safety">安全事项</a></li>
+                <li><a href="index.html">返回首页</a></li>
             </ul>
         </nav>
     </div>
