--- a/w1.html
+++ b/w1.html
@@ -326,19 +326,19 @@
             </section>
 
             <div class="section-title">
-                <h2>须知</h2>
+                <h2>入门晶体</h2>
             </div>
             <div class="card-grid">
                 <article class="card">
-                    <img src="crystal00_1.png" alt="安全与操作" loading="lazy">
+                    <img src="crystal02_1_1.png" alt="结晶方式" loading="lazy">
                     <div class="card-content">
                         <div>
-                            <h3>安全与操作规范</h3>
-                            <p class="card-meta">新人必读 · 定期回看</p>
+                            <h3>硫酸铜</h3>
+                            <p class="card-meta">蓝色晶体 · 硫酸盐类</p>
                         </div>
-                        <p>每一个人在制作晶体前都需要了解的重要知识</p>
+                        <p>初次晶体制作，可以做到送女朋友的等级吗？</p>
                         <div class="card-footer">
-                            <a href="001.html">阅读全文 →</a>
+                            <a href="02.html">阅读全文 →</a>
                         </div>
                     </div>
                 </article>
@@ -371,102 +371,6 @@
                     </div>
                 </article>
             </div>
-
-            <div class="section-title">
-                <h2>专题</h2>
-            </div>
-
-            <div class="card-grid">
-                <article class="card">
-                    <img src="crystal01_1.png" alt="结晶方式" loading="lazy">
-                    <div class="card-content">
-                        <div>
-                            <h3>结晶方式</h3>
-                            <p class="card-meta">基础方法 · 操作指南</p>
-                        </div>
-                        <p>掌握基础结晶原理，了解溶液配置与操作注意事项。</p>
-                        <div class="card-footer">
-                            <a href="01.html">阅读全文 →</a>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <img src="crystal02_1.png" alt="硫酸铜晶体" loading="lazy">
-                    <div class="card-content">
-                        <div>
-                            <h3>入门晶体</h3>
-                            <p class="card-meta">单晶培养 · 溶液控制</p>
-                        </div>
-                        <p>开始接触晶体化学这门有趣的科目</p>
-                        <div class="card-footer">
-                            <a href="w1.html">阅读全文 →</a>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <img src="x.png" alt="" loading="lazy">
-                    <div class="card-content">
-                        <div>
-                            <h3>尚未定稿</h3>
-                            <p class="card-meta">____ · ____</p>
-                        </div>
-                        <p>___________</p>
-                        <div class="card-footer">
-                            <a disabled>敬请期待</a>
-                        </div>
-                    </div>
-                </article>
-            </div>
-
-            <div class="section-title">
-                <h2>其他</h2>
-            </div>
-            <div class="card-grid">
-                <article class="card">
-                    <img src="x.png" alt="" loading="lazy">
-                    <div class="card-content">
-                        <div>
-                            <h3>晶体保存法</h3>
-                            <p class="card-meta">怎么保存？· 保存须知？</p>
-                        </div>
-                        <p>有哪些可以保存晶体的方法？</p>
-                        <div class="card-footer">
-                            <a disabled>敬请期待</a>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <img src="x.png" alt="" loading="lazy">
-                    <div class="card-content">
-                        <div>
-                            <h3>晶体摄影</h3>
-                            <p class="card-meta">晶体作品 · 拍摄技巧</p>
-                        </div>
-                        <p>怎么拍出好看的晶体作品？</p>
-                        <div class="card-footer">
-                            <a disabled>敬请期待</a>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <img src="x.png" alt="" loading="lazy">
-                    <div class="card-content">
-                        <div>
-                            <h3>尚未定稿</h3>
-                            <p class="card-meta">____ · ____</p>
-                        </div>
-                        <p>___________</p>
-                        <div class="card-footer">
-                            <a disabled>敬请期待</a>
-                        </div>
-                    </div>
-                </article>
-            </div>
-
             <div class="section-divider"></div>
         </main>
     </div>
