--- a/w1.html
+++ b/w1.html
@@ -334,7 +334,7 @@
                     <div class="card-content">
                         <div>
                             <h3>硫酸铜</h3>
-                            <p class="card-meta">蓝色晶体 · 硫酸盐类</p>
+                            <p class="card-meta">蓝色晶体 · 简单盐类</p>
                         </div>
                         <p>初次晶体制作，可以做到送女朋友的等级吗？</p>
                         <div class="card-footer">
