--- a/001.html
+++ b/001.html
@@ -240,11 +240,11 @@
                         </li>
                         <li class="step-item">
                             <div class="step-title">慎重对待毒性晶体</div>
-                            <div class="step-detail">如赤血盐（或其他具有一定毒性的晶体），务必采取严格的防护措施，避免摄入或吸入粉尘。</div>
+                            <div class="step-detail">如重铬酸钾（或其他具有一定毒性的晶体），务必采取严格的防护措施，避免摄入或吸入粉尘。</div>
                         </li>
                         <li class="step-item">
                             <div class="step-title">使用专业器材</div>
-                            <div class="step-detail">建议使用玻璃搅拌棒或实验室级别的工具搅拌溶液，而非随手可得的餐具（如果你八字够硬 可以学学某个lz用筷子搅拌溶液后下意识嗦一口）。</div>
+                            <div class="step-detail">建议使用玻璃搅拌棒或实验室级别的工具搅拌溶液，而非随手可得的餐具（除非你想学某个lz用筷子搅拌溶液后下意识嗦一口）。</div>
                         </li>
                         <li class="step-item">
                             <div class="step-title">晶体直接接触</div>
