--- a/01.html
+++ b/01.html
@@ -246,7 +246,6 @@
                             <strong>优势领域：</strong>
                             <ul>
                                 <li>操作难度低</li>
-                                <li>结晶效率高、周期短</li>
                                 <li>成本低廉</li>
                             </ul>
                         </div>
@@ -254,7 +253,6 @@
                             <strong>劣势领域：</strong>
                             <ul>
                                 <li>晶体结构不完整</li>
-                                <li>底面必然平坦</li>
                             </ul>
                         </div>
                     </div>
@@ -295,7 +293,7 @@
                             <strong>技术难点：</strong>
                             <ul>
                                 <li>需基础晶体</li>
-                                <li>维护周期长</li>
+                                <li>可以看到内部有根线</li>
                             </ul>
                         </div>
                     </div>
