--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
         /* 卡片系统 */
         .card-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(3, 1fr);
+            grid-auto-flow: dense;
             gap: 2rem;
             margin: 3rem 0;
         }
@@ -307,6 +308,10 @@
                 gap: 0.5rem;
             }
 
+            .card-grid {
+                grid-template-columns: 1fr; 
+            }
+
             .section-title::before,
             .section-title::after {
                 width: 100%;
@@ -336,6 +341,17 @@
             border-radius: 4px; 
             font-size: 0.9rem; 
             z-index: 1; 
+        }
+
+        .site-footer {
+            padding: 1.5rem 2rem;
+            color: var(--primary);
+            background: var(--accent);
+            margin-top: 3rem;
+            text-align: left;
+            border-radius: 8px;
+            font-size: 0.95rem;
+            box-shadow: 0 4px 24px rgba(0,0,0,0.08);
         }
 
     </style>
@@ -499,6 +515,10 @@
 
             <div class="section-divider"></div>
         </main>
+
+        <footer class="site-footer">
+            本站作者：麒麟（kun）
+        </footer>
     </div>
 
     <script>
