--- a/w1.html
+++ b/w1.html
@@ -358,7 +358,7 @@
                 <article class="card">
                     <div class="image-container">
                     <img src="index2c1_01.png" alt="硫酸铜" loading="lazy">
-                    <div class="author-name">作者：紫色硫酸铜</div> 
+                    <div class="author-name">图源：紫色硫酸铜</div> 
                 </div>
                     <div class="card-content">
                         <div>
@@ -386,19 +386,6 @@
                     </div>
                 </article>
 
-                <article class="card">
-                    <img src="x.png" alt="" loading="lazy">
-                    <div class="card-content">
-                        <div>
-                            <h3>尚未定稿</h3>
-                            <p class="card-meta">____ · ____</p>
-                        </div>
-                        <p>___________</p>
-                        <div class="card-footer">
-                            <a disabled>敬请期待</a>
-                        </div>
-                    </div>
-                </article>
             </div>
             <div class="section-divider"></div>
         </main>
