--- a/index.html
+++ b/index.html
@@ -385,33 +385,6 @@
                     </div>
                 </article>
 
-                <article class="card">
-                    <img src="x.png" alt="" loading="lazy">
-                    <div class="card-content">
-                        <div>
-                            <h3>尚未定稿</h3>
-                            <p class="card-meta">____ · ____</p>
-                        </div>
-                        <p>___________</p>
-                        <div class="card-footer">
-                            <a disabled>敬请期待</a>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <img src="x.png" alt="" loading="lazy">
-                    <div class="card-content">
-                        <div>
-                            <h3>尚未定稿</h3>
-                            <p class="card-meta">____ · ____</p>
-                        </div>
-                        <p>___________</p>
-                        <div class="card-footer">
-                            <a disabled>敬请期待</a>
-                        </div>
-                    </div>
-                </article>
             </div>
 
             <div class="section-title">
@@ -421,7 +394,7 @@
                 <article class="card">
                     <div class="image-container">
                     <img src="indexc2_01.png" alt="结晶方式" loading="lazy">
-                    <div class="author-name">作者：LX虫管吖Galvin</div> 
+                    <div class="author-name">图源：LX虫管吖Galvin</div> 
                 </div>
                     <div class="card-content">
                         <div>
@@ -438,7 +411,7 @@
                 <article class="card">
                     <div class="image-container">
                     <img src="indexc2_02.png" alt="入门晶体" loading="lazy">
-                    <div class="author-name">作者：紫色硫酸铜</div> 
+                    <div class="author-name">图源：紫色硫酸铜</div> 
                 </div>
                     <div class="card-content">
                         <div>
@@ -451,19 +424,7 @@
                         </div>
                     </div>
                 </article>
-                <article class="card">
-                    <img src="x.png" alt="" loading="lazy">
-                    <div class="card-content">
-                        <div>
-                            <h3>尚未定稿</h3>
-                            <p class="card-meta">____ · ____</p>
-                        </div>
-                        <p>___________</p>
-                        <div class="card-footer">
-                            <a disabled>敬请期待</a>
-                        </div>
-                    </div>
-                </article>
+            
             </div>
 
             <div class="section-title">
@@ -498,19 +459,6 @@
                     </div>
                 </article>
 
-                <article class="card">
-                    <img src="x.png" alt="" loading="lazy">
-                    <div class="card-content">
-                        <div>
-                            <h3>尚未定稿</h3>
-                            <p class="card-meta">____ · ____</p>
-                        </div>
-                        <p>___________</p>
-                        <div class="card-footer">
-                            <a disabled>敬请期待</a>
-                        </div>
-                    </div>
-                </article>
             </div>
 
             <div class="section-divider"></div>
