--- a/02.html
+++ b/02.html
@@ -317,7 +317,7 @@
         <main class="content">
             <h1>晶体化学指南<br><span style="font-size:0.6em; color:var(--secondary)">03硫酸铜篇</span></h1>
 <img src="crystal02_1_1.png" alt="硫酸铜晶体特写" style="width:100%;max-height:400px;object-position: center top; border-radius:12px; margin:2em 0; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
-
+            <p>图源：食堂人民科学协会-荣</p>
             <section id="basic">
                 <h2>一、基础认识</h2>
                 
