--- a/w1.html
+++ b/w1.html
@@ -362,8 +362,7 @@
             <section class="hero">
                 <h1>晶体培养指南</h1>
                 <p>
-                    学习晶体化学知识，从基础结晶到高级培养技术<br>
-                    一些我的见解
+                    晶体分类专区
                 </p>
             </section>
 
