--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="boZb7a_CJtIxYujhyRGgdcNkRtGZL4oc2efjgBe_5ME" />
     <title>晶体培养指南</title>
     <style>
         :root {
