--- a/index.html
+++ b/index.html
@@ -386,6 +386,23 @@
                     </div>
                 </article>
 
+                <article class="card">
+                    <div class="image-container">
+                    <img src="westleaf01.png" alt="投稿" loading="lazy">
+                    <div class="author-name">图源：westleaf</div> 
+                </div>
+                    <div class="card-content">
+                        <div>
+                            <h3>投稿与建议</h3>
+                            <p class="card-meta">给与建议 · 投稿内容</p>
+                        </div>
+                        <p>欢迎投稿作品于此或投稿纠正本站内容</p>
+                        <div class="card-footer">
+                            <a href="002.html">阅读全文 →</a>
+                        </div>
+                    </div>
+                </article>
+
             </div>
 
             <div class="section-title">
