--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="boZb7a_CJtIxYujhyRGgdcNkRtGZL4oc2efjgBe_5ME" />
+    <link rel="icon" href="icon.png" type="image/png">
     <title>晶体培养指南</title>
     <style>
         :root {
