--- a/w1.html
+++ b/w1.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="icon.png" type="image/png">
     <title>晶体培养指南</title>
     <style>
                 :root {
