--- a/002.html
+++ b/002.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="icon.png" type="image/png">
     <title>晶体化学指南 - 投稿与建议</title>
     <style>
         :root {
