--- a/02.html
+++ b/02.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="icon.png" type="image/png">
     <title>晶体化学指南 - 03硫酸铜篇</title>
     <style>
         :root {
