--- a/w1.html
+++ b/w1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="icon.png" type="image/png">
-    <title>晶体培养指南</title>
+    <title>晶体培养指南 - 晶体分类</title>
     <style>
                 :root {
             --primary: #2A5C84;
