--- a/03.html
+++ b/03.html
@@ -247,7 +247,7 @@
             <ul>
                 <li><a href="#basic">基础认识</a></li>
                 <li><a href="#application">实际用途</a></li>
-                <li><a href="#another">小知识</a></li>
+                <li><a href="#another">混晶</a></li>
                 <li><a href="index.html">返回首页</a></li>
             </ul>
         </nav>
