--- a/03.html
+++ b/03.html
@@ -185,8 +185,8 @@
                     <p class="chemical-formula">化学式：KAl(SO<sub>4</sub>)<sub>2</sub>·12H<sub>2</sub>O</p>
                     <ul>
                         <li>外观：无色透明晶体，微甜带涩味</li>
-                        <li>特性：在干燥空气中风化，潮湿空气中溶化淌水</li>
                         <li>溶解性：易溶于水和甘油，不溶于醇和丙酮</li>
+                        <li>结晶形态：常见为八面体或立方体晶体，具有玻璃光泽。</li>
                     </ul>
                 </div>
 
