--- a/03.html
+++ b/03.html
@@ -186,7 +186,7 @@
                     <ul>
                         <li>外观：无色透明晶体，微甜带涩味</li>
                         <li>溶解性：易溶于水和甘油，不溶于醇和丙酮</li>
-                        <li>结晶形态：常见为八面体或立方体晶体，具有玻璃光泽。</li>
+                        <li>结晶形态：常见为八面体或立方体晶体，具有玻璃光泽</li>
                     </ul>
                 </div>
 
