--- a/04.html
+++ b/04.html
@@ -281,6 +281,7 @@
                         </div>
                         <img src="x6.png" alt="" loading="lazy" style="width:100%;max-height:400px;object-position: 
                         center top; border-radius:12px; margin:2em 0; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
+                        <p>图源：紫色硫酸铜</p>
                     </ul>
                 </div>
             </section>
