--- a/index.html
+++ b/index.html
@@ -451,15 +451,18 @@
             </div>
             <div class="card-grid">
                 <article class="card">
-                    <img src="x.png" alt="" loading="lazy">
+                    <div class="image-container">
+                    <img src="浅梦新河.png" alt="保存方法" loading="lazy">
+                    <div class="author-name">图源：LX虫管吖Galvin</div> 
+                </div>
                     <div class="card-content">
                         <div>
-                            <h3>晶体保存法</h3>
-                            <p class="card-meta">怎么保存？· 保存须知？</p>
+                            <h3>晶体保存</h3>
+                            <p class="card-meta">怎么保存 · 长期保存</p>
                         </div>
-                        <p>有哪些可以保存晶体的方法？</p>
+                        <p>了解6大保存法的优缺点，选自己最适合的方法</p>
                         <div class="card-footer">
-                            <a disabled>敬请期待</a>
+                            <a href="04.html">阅读全文 →</a>
                         </div>
                     </div>
                 </article>
