--- a/04.html
+++ b/04.html
@@ -219,11 +219,6 @@
                             <strong>缺点：</strong>
                             <p>不能保存可以和指甲油反应或者溶于指甲油的晶体 涂指甲油后晶体一定程度上会失去规整的形状(最大痛点)</p>
                         </div>
-                        <div class="note">
-                            <strong>警告：</strong>
-                            <p>即使晶体已经涂上指甲油，但仍然不可用手触摸</p>
-                        </div>
-                    </ul>
                 </div>
             </section>
 
@@ -242,7 +237,7 @@
             </section>
 
             <section id="x4">
-                <h2>No.4 西林瓶保存（最推荐）</h2>
+                <h2>No.4 西林瓶/玻璃样品瓶保存（最推荐）</h2>
                 <div class="method-card">
                     <ul class="step-list">
                         <li>把晶体放在西林瓶里保存</li>
