--- a/04.html
+++ b/04.html
@@ -181,7 +181,7 @@
                 <h2>基础认识</h2>
                 <div class="method-card">
                     <p>不同的晶体各自有自己的最好保存方法，这里按照观赏效果排名做分类。<br>
-                        以下资料源自用户 紫色硫酸铜</p>
+                        以下资料编写自 紫色硫酸铜</p>
                 </div>
             </section>
 
