--- a/w1.html
+++ b/w1.html
@@ -386,19 +386,22 @@
                             <a href="02.html">阅读全文 →</a>
                 </div>
             </div>
-        </article>
+            </article>
             <article class="card">
-                <img src="x.png" alt="" loading="lazy">
+                <div class="image-container">
+                <img src="关关01.png" alt="硫酸铝钾" loading="lazy">
+                <div class="author-name">图源：关关</div> 
+            </div>
                 <div class="card-content">
                     <div>
                         <h3>硫酸铝钾</h3>
                         <p class="card-meta">透明晶体 · 海纳百川</p>
                     </div>
-                    <p>可以和硫酸铬钾做成混晶，也可以影响硫酸铜外观</p>
+                    <p>可以和硫酸铬钾做混晶，也可以影响硫酸铜外观</p>
                     <div class="card-footer">
-                        <a href="03.html">阅读全文 →</a>
-                    </div>
-                </div>
+                        <a href="04.html">阅读全文 →</a>
+            </div>
+            </div>
             </article>
             
                 <article class="card">
