--- a/03.html
+++ b/03.html
@@ -186,7 +186,7 @@
                     <ul>
                         <li>外观：无色透明晶体，微甜带涩味</li>
                         <li>溶解性：易溶于水和甘油，不溶于醇和丙酮</li>
-                        <li>结晶形态：常见为八面体或立方体晶体，具有玻璃光泽</li>
+                        <li>结晶形态：常见为八面体（单晶）或立方体晶体，具有玻璃光泽</li>
                     </ul>
                 </div>
 
@@ -236,7 +236,7 @@
                         <img src="LX虫管吖Galvin01.png" alt="安全与操作" loading="lazy" style="width:100%;max-height:400px;object-position: center top; border-radius:12px; margin:2em 0; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
                         <p>图源：LX虫管吖Galvin</p>
                         <img src="0301.png" alt="安全与操作" loading="lazy" style="width:100%;max-height:400px;object-position: center top; border-radius:12px; margin:2em 0; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
-                        <p>结构图</p>
+                        <p>外形图</p>
                     </ul>
                 </div>
             </section>
