--- a/03.html
+++ b/03.html
@@ -237,6 +237,7 @@
                         <p>图源：LX虫管吖Galvin</p>
                         <img src="0301.png" alt="安全与操作" loading="lazy" style="width:100%;max-height:400px;object-position: center top; border-radius:12px; margin:2em 0; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
                         <p>晶体外形图（投影版）</p>
+                        <p>通常培养皿会析出的外观</p>
                     </ul>
                 </div>
             </section>
