--- a/02.html
+++ b/02.html
@@ -425,6 +425,18 @@
                     </ul>
                 </div>
             </section>
+
+            <section id="x">
+                <h2>四、品牌推荐</h2>
+                <div class="note">
+                    <ul>
+                        <li>别贪小便宜而买到劣质/假的硫酸铜</li>
+                        <p>（站主买过会挥发刺激性气味的....）</p>
+                        <li>推荐 天津华盛、天津众联、西陇</li>
+                    </ul>
+                </div>
+
+            </section>
         </main>
 
         <nav class="nav">
@@ -433,6 +445,7 @@
                 <li><a href="#basic">基础认识</a></li>
                 <li><a href="#experiment">实验制备</a></li>
                 <li><a href="#safety">安全事项</a></li>
+                <li><a href="#x">品牌推荐</a></li>
                 <li><a href="index.html">返回首页</a></li>
             </ul>
         </nav>
