--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                 <article class="card">
                     <div class="image-container">
                     <img src="浅梦新河.png" alt="保存方法" loading="lazy">
-                    <div class="author-name">图源：LX虫管吖Galvin</div> 
+                    <div class="author-name">图源：浅梦新河</div> 
                 </div>
                     <div class="card-content">
                         <div>
