--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
             <section class="hero">
                 <h1>晶体培养指南</h1>
                 <p>
-                    学习晶体化学知识，从基础结晶到高级培养技术<br>
-                    一些我的见解
+                    学习晶体化学知识，从基础结晶到培养技术<br>
+                    新人向内容，一些我的见解
                 </p>
             </section>
 
@@ -437,9 +437,26 @@
                             <h3>入门晶体</h3>
                             <p class="card-meta">单晶培养 · 溶液控制</p>
                         </div>
-                        <p>开始接触晶体化学这门有趣的科目</p>
+                        <p>开始接触晶体化学这门有趣的科目，有哪些晶体可以制作？</p>
                         <div class="card-footer">
                             <a href="w1.html">阅读全文 →</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="image-container">
+                    <img src="浅梦新河02.png" alt="溶液配置" loading="lazy">
+                    <div class="author-name">图源：浅梦新河</div> 
+                </div>
+                    <div class="card-content">
+                        <div>
+                            <h3>溶液配置</h3>
+                            <p class="card-meta">注意事项 · 浓度配置</p>
+                        </div>
+                        <p>溶液配置的注意事项，新人需要了解的大致内容</p>
+                        <div class="card-footer">
+                            <a href="05.html">阅读全文 →</a>
                         </div>
                     </div>
                 </article>
