--- a/index.html
+++ b/index.html
@@ -504,6 +504,8 @@
         </main>
 
         <footer class="site-footer">
+            防喷声明：本站内容主要让新人快速入门，日后有时间再制作详细补充<br>
+            一些更学术、详细的内容还请参考相关书籍或文献<br>
             本站作者：麒麟（kun）
         </footer>
     </div>
