--- a/002.html
+++ b/002.html
@@ -430,7 +430,7 @@
                         <label>投稿内容</label>
                         <textarea name="content" rows="6" required
                                   placeholder="请详细描述投稿内容（可粘贴图片链接）"></textarea>
-                        <p class="form-note">支持Markdown格式，图片请使用图床链接<br>
+                        <p class="form-note">支持Markdown格式，图片请使用图床链接（横向图片、暂不支持纵向图）<br>
                           在此感谢您的投稿与分享！
                         </p>
                     </div>
