--- a/03.html
+++ b/03.html
@@ -233,11 +233,15 @@
                         <li>可以与硫酸铬钾混合、制成混晶-等轴晶系（立方晶系）</li>
                         <li>颜色：紫色浓淡取决于硫酸铬钾比例</li>
                         <li>悬晶：变成正八面体（暂无图）</li>
-                        <img src="LX虫管吖Galvin01.png" alt="安全与操作" loading="lazy" style="width:100%;max-height:400px;object-position: center top; border-radius:12px; margin:2em 0; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
+                        <img src="LX虫管吖Galvin01.png" alt="-" loading="lazy" style="width:100%;max-height:400px;object-position: center top; border-radius:12px; margin:2em 0; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
                         <p>图源：LX虫管吖Galvin</p>
-                        <img src="0301.png" alt="安全与操作" loading="lazy" style="width:100%;max-height:400px;object-position: center top; border-radius:12px; margin:2em 0; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
+                        <img src="0301.png" alt="-" loading="lazy" style="width:100%;max-height:400px;object-position: center top; border-radius:12px; margin:2em 0; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
                         <p>晶体外形图（投影版）</p>
-                        <p>上图通常沉底单晶（容器底）会析出的外观、悬晶则是正八面体（暂无图）</p>
+                        <p>上图通常沉底单晶（容器底）会析出的外观,悬晶则是正八面体</p>
+                        <br>
+                        <p>来自贴吧<strong>L20J10Q</strong>大佬的补充：</p>
+                        <li>进阶操作：将用硫酸铬钾染色的硫酸铝钾再放入硫酸铝钾中的饱和溶液中，可制作出双层晶体。</li>
+                            <p>注意 内层晶种必须完整，否则将会出现齿状纹路（亲身体会，一颗晶体就废了）</p>
                     </ul>
                 </div>
             </section>
