--- a/05.html
+++ b/05.html
@@ -360,7 +360,7 @@
                     <h3>4.4 补充</h3>
                     <div class="note">
                         <strong>大佬们的习惯参考：</strong>
-                        <p>滴水法：每次溶液出晶时取出后滴上几滴水，使溶再次稳定后才析出下一次的晶体</p>
+                        <p>滴水法：每次溶液出晶时取出后滴上两三毫升的水，使溶再次稳定后才析出下一次的晶体</p>
                     </div>
                 </div>
             </section>
