--- a/index.html
+++ b/index.html
@@ -485,15 +485,18 @@
                 </article>
 
                 <article class="card">
-                    <img src="x.png" alt="" loading="lazy">
+                    <div class="image-container">
+                    <img src="浅梦新河03.png" alt="晶体摄影" loading="lazy">
+                    <div class="author-name">图源：浅梦新河</div> 
+                </div>
                     <div class="card-content">
                         <div>
                             <h3>晶体摄影</h3>
                             <p class="card-meta">晶体作品 · 拍摄技巧</p>
                         </div>
-                        <p>怎么拍出好看的晶体作品？</p>
+                        <p>怎么拍才能把晶体拍得好看？都有哪些技巧呢？</p>
                         <div class="card-footer">
-                            <a disabled>敬请期待</a>
+                            <a href="06.html">阅读全文 →</a>
                         </div>
                     </div>
                 </article>
