--- a/06.html
+++ b/06.html
@@ -216,7 +216,7 @@
             <section id="preface">
                 <h2>一、前情提要</h2>
                 <div class="method-card">
-                    <p>本教程详细介绍如何使用手机进行晶体摄影，重点讲解小米手机的专业模式操作及应用。对于苹果手机，也可借助 Halide、ProCam 等第三方软件实现类似功能。内容来源于冰冰、蜉蝣I君、紫色硫酸铜、mo（有改动）</p>
+                    <p>本教程详细介绍如何使用手机进行晶体摄影，重点讲解小米手机的专业模式操作及应用。对于苹果手机，也可借助 Halide、ProCam 等第三方软件实现类似功能。内容来源于<strong>冰冰、蜉蝣I君、紫色硫酸铜、mo</strong>（有改动）</p>
                 </div>
             </section>
 
