--- a/06.html
+++ b/06.html
@@ -395,12 +395,16 @@
                     <h3>高像素相机</h3>
                     <ul class="step-list">
                         <li class="step-item">
-                            <div class="step-title">性价比推荐</div>
+                            <div class="step-title">高端旗舰性价比推荐</div>
                             <div class="step-detail">Sony a7r2</div>
                         </li>
                         <li class="step-item">
-                            <div class="step-title">性能推荐</div>
+                            <div class="step-title">高端旗舰性能推荐</div>
                             <div class="step-detail">Sony a7r5</div>
+                        </li>
+                        <li class="step-item">
+                            <div class="step-title">中端性价比推荐</div>
+                            <div class="step-detail">Sony 6400、Canon r100</div>
                         </li>
                         <li class="step-item">
                             <div class="step-title">资金充裕推荐</div>
@@ -409,6 +413,17 @@
                     </ul>
                 </div>
             </section>
+            <section id="x">
+                <div class="method-card">
+                    <strong>
+                        <p style="text-align:center;color:#2A5C84">
+                            “拍得好看是次要，做得好看才是主要。”
+                        </p>
+                    <p style="text-align: right; margin-right: 10px;color:#2A5C84">—— mo</p>
+                </div>
+            </strong>
+            </section>
+            
         </main>
 
         <nav class="nav">
