--- a/index.html
+++ b/index.html
@@ -404,6 +404,23 @@
                     </div>
                 </article>
 
+                <article class="card">
+                    <div class="image-container">
+                    <img src="迷路的野指针.png" alt="作品" loading="lazy">
+                    <div class="author-name">图源：迷路的野指针</div> 
+                </div>
+                    <div class="card-content">
+                        <div>
+                            <h3>大佬作品集</h3>
+                            <p class="card-meta">匠心独运 · 结晶之美</p>
+                        </div>
+                        <p>精选大佬们的匠心之作，每一颗晶体都凝聚着独特的艺术与科学之美</p>
+                        <div class="card-footer">
+                            <a href="07.html">查看作品 →</a>
+                        </div>
+                    </div>
+                </article>
+
             </div>
 
             <div class="section-title">
