--- a/07.html
+++ b/07.html
@@ -219,23 +219,93 @@
             </section>
 
             <section id="copper-sulfate">
-                <h2>硫酸铜晶体作品</h2>
+                <h2>硫酸铜晶体</h2>
                 <div class="method-card">
                     <div class="step-list">
-                        <img src="x1.png" class="content-image" alt="硫酸铜晶体01">
-                        <p style="text-align:center; color:var(--secondary)">作者：</p>
-                        
-                        <img src="x2.png" class="content-image" alt="硫酸铜晶体02">
-                        <p style="text-align:center; color:var(--secondary)">作者：</p>
+                        <img src="紫色硫酸铜01.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：紫色硫酸铜</p>
+                        <img src="作品12.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品13.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品14.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品15.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
                     </div>
                 </div>
             </section>
+
+            <section id="sulfate">
+                <h2>硫酸铝钾/铬明矾混晶</h2>
+                <div class="method-card">
+                    <div class="step-list">
+                        <img src="作品2.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品3.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品6.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品7.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品8.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="sulfate2">
+                <h2>硫酸亚铁晶体</h2>
+                <div class="method-card">
+                    <img src="作品18.png" class="content-image" alt="">
+                    <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                    <img src="作品19.png" class="content-image" alt="">
+                    <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                </div>
+            </section>
+
+            <section id="sulfate3">
+                <h2>草酸铝（铬）酸钠</h2>
+                <div class="method-card">
+                    <div class="step-list">
+                        <img src="作品10.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：紫色硫酸铜</p>
+                        <img src="作品11.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="sulfate4">
+                <h2>其他好看晶体</h2>
+                <div class="method-card">
+                    <div class="step-list">
+                        <img src="作品9.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：铜</p>
+                        <img src="作品17.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：镍</p>
+                        <img src="三草酸合铁酸钾01.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：三草酸合铁酸钾</p>
+                        <img src="作品20.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：草酸氢钠</p>
+                        <img src="作品21.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：LX虫管吖Galvin，晶体：乙酸铕</p>
+                        <img src="作品22.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：LX虫管吖Galvin，晶体：乙酸铕</p>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
         <nav class="nav">
             <h3>内容导航</h3>
             <ul>
-                <li><a href="#preface">硫酸铜</a></li>
+                <li><a href="#copper-sulfate">硫酸铜</a></li>
+                <li><a href="sulfate">明矾/铬明矾</a></li>
+                <li><a href="#ulfate2">硫酸亚铁</a></li>
+                <li><a href="#sulfate3">草酸铝（铬）酸钠</a></li>
+                <li><a href="#sulfate4">其他晶体</a></li>
                 <li><a href="index.html">返回首页</a></li>
             </ul>
         </nav>
