--- a/07.html
+++ b/07.html
@@ -282,6 +282,8 @@
                     <div class="step-list">
                         <img src="作品9.png" class="content-image" alt="">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：铜</p>
+                        <img src="作品26.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：清蒸带鱼，晶体：铜</p>
                         <img src="作品17.png" class="content-image" alt="">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：镍</p>
                         <img src="三草酸合铁酸钾01.png" class="content-image" alt="">
@@ -292,6 +294,18 @@
                         <p style="text-align:center; color:var(--secondary)">作者：LX虫管吖Galvin，晶体：乙酸铕</p>
                         <img src="作品22.png" class="content-image" alt="">
                         <p style="text-align:center; color:var(--secondary)">作者：LX虫管吖Galvin，晶体：乙酸铕</p>
+                        <img src="作品23.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：待到群星闪耀时，晶体：三水合丙二酸铁钾</p>
+                        <img src="作品24.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：待到群星闪耀时，晶体：三水合丙二酸铁钾</p>
+                        <img src="作品25.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：待到群星闪耀时，晶体：四氯二水合铜酸钾</p>
+                        <img src="作品27.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：青于，晶体：高铼酸钾</p>
+                        <img src="作品28.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：青于，晶体：高铼酸钾</p>
+                        <img src="作品29.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：青于，晶体：高铼酸钾</p>
                     </div>
                 </div>
             </section>
