--- a/07.html
+++ b/07.html
@@ -281,11 +281,11 @@
                 <div class="method-card">
                     <div class="step-list">
                         <img src="作品9.png" class="content-image" alt="">
-                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：铜</p>
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：二水合二氯化二乙二胺络铜</p>
                         <img src="作品26.png" class="content-image" alt="">
                         <p style="text-align:center; color:var(--secondary)">作者：清蒸带鱼，晶体：铜</p>
                         <img src="作品17.png" class="content-image" alt="">
-                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：镍</p>
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：硫酸三乙二胺络镍</p>
                         <img src="三草酸合铁酸钾01.png" class="content-image" alt="">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：三草酸合铁酸钾</p>
                         <img src="作品20.png" class="content-image" alt="">
@@ -306,6 +306,14 @@
                         <p style="text-align:center; color:var(--secondary)">作者：青于，晶体：高铼酸钾</p>
                         <img src="作品29.png" class="content-image" alt="">
                         <p style="text-align:center; color:var(--secondary)">作者：青于，晶体：高铼酸钾</p>
+                        <img src="作品30.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：泠鳞，晶体：硫酸钐</p>
+                        <img src="作品31.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：泠鳞，晶体：硫酸谱</p>
+                        <img src="作品32.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：泠鳞，晶体：硫酸汝</p>
+                        <img src="作品33.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：银</p>
                     </div>
                 </div>
             </section>
