--- a/07.html
+++ b/07.html
@@ -311,7 +311,7 @@
                         <img src="作品31.png" class="content-image" alt="">
                         <p style="text-align:center; color:var(--secondary)">作者：泠鳞，晶体：硫酸谱</p>
                         <img src="作品32.png" class="content-image" alt="">
-                        <p style="text-align:center; color:var(--secondary)">作者：泠鳞，晶体：硫酸汝</p>
+                        <p style="text-align:center; color:var(--secondary)">作者：泠鳞，晶体：硫酸钕</p>
                         <img src="作品33.png" class="content-image" alt="">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：银</p>
                     </div>
