--- a/06.html
+++ b/06.html
@@ -400,7 +400,7 @@
                         </li>
                         <li class="step-item">
                             <div class="step-title">高端旗舰性能推荐</div>
-                            <div class="step-detail">Sony a7r5</div>
+                            <div class="step-detail">Sony a7r5、Canon 5D3</div>
                         </li>
                         <li class="step-item">
                             <div class="step-title">中端性价比推荐</div>
