--- a/index.html
+++ b/index.html
@@ -518,14 +518,27 @@
                     </div>
                 </article>
 
+                <article class="card">
+                    <img src="book.png" alt="" loading="lazy">
+                    <div class="card-content">
+                        <div>
+                            <h3>图书馆</h3>
+                            <p class="card-meta">电子书刊 · 自学推荐</p>
+                        </div>
+                        <p>一些更为学术性、内容更为丰富的书刊推荐。对这个领域想深造的十分友好。</p>
+                        <div class="card-footer">
+                            <a href="08.html">前往阅读</a>
+                        </div>
+                    </div>
+                </article>
+
             </div>
 
             <div class="section-divider"></div>
         </main>
 
         <footer class="site-footer">
-            防喷声明：本站内容主要让新人快速入门，日后有时间再制作详细补充<br>
-            一些更学术、详细的内容还请参考相关书籍或文献<br>
+            声明：本站内容主要让新人快速入门，日后有时间再制作详细补充<br>
             本站作者：麒麟（kun）
         </footer>
     </div>
