--- a/07.html
+++ b/07.html
@@ -232,6 +232,8 @@
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
                         <img src="作品15.png" class="content-image" alt="">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针</p>
+                        <img src="作品34.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：长街听风</p>
                     </div>
                 </div>
             </section>
