--- a/07.html
+++ b/07.html
@@ -238,7 +238,7 @@
                 </div>
             </section>
 
-            <section id="sulfate">
+            <section id="x1">
                 <h2>硫酸铝钾/铬明矾混晶</h2>
                 <div class="method-card">
                     <div class="step-list">
@@ -326,8 +326,8 @@
             <h3>内容导航</h3>
             <ul>
                 <li><a href="#copper-sulfate">硫酸铜</a></li>
-                <li><a href="sulfate">明矾/铬明矾</a></li>
-                <li><a href="#ulfate2">硫酸亚铁</a></li>
+                <li><a href="#x1">明矾/铬明矾</a></li>
+                <li><a href="#sulfate2">硫酸亚铁</a></li>
                 <li><a href="#sulfate3">草酸铝（铬）酸钠</a></li>
                 <li><a href="#sulfate4">其他晶体</a></li>
                 <li><a href="index.html">返回首页</a></li>
