--- a/07.html
+++ b/07.html
@@ -316,6 +316,8 @@
                         <p style="text-align:center; color:var(--secondary)">作者：泠鳞，晶体：硫酸钕</p>
                         <img src="作品33.png" class="content-image" alt="">
                         <p style="text-align:center; color:var(--secondary)">作者：迷路的野指针，晶体：银</p>
+                        <img src="作品35.png" class="content-image" alt="">
+                        <p style="text-align:center; color:var(--secondary)">作者：mo，晶体：铯</p>
                     </div>
                 </div>
             </section>
